comentarios en el css

--- a/Lab4uTest/Content/Site.css
+++ b/Lab4uTest/Content/Site.css
@@ -127,7 +127,7 @@ body {
 /* ***************** /VISTA USUARIOS *****************  */
 
 /* ***************** CREAR USUARIOS *****************  */
-
+/*Comparte clases de estilos con editar usuarios*/
 
 /* ***************** /CREAR USUARIOS *****************  */
 
