Cambios en los estilos

--- a/Lab4uTest/Views/Home/Index.cshtml
+++ b/Lab4uTest/Views/Home/Index.cshtml
@@ -14,7 +14,8 @@
         <div class="col-md-6 inicio-informaciones mb-5">
             <h2>¿Quienes somos?</h2>
             <p>
-                Incluir historia sobre quienes son lab4u y que sirva como texto de relleno para redireccionar a su página para mayor información
+                Lab4U es una empresa con el sueño de democratizar el acceso a una educación de calidad!Estamos comprometidos en poner las mejores herramientas educativas frente a profesores y estudiantes. 
+                Creemos que el próximo Einstein o Marie Curie podrían estar en una sala de clases hoy. Descubrirlos es solo cuestión de inspirarlos.
             </p>
             <a class="btn btn-outline-secondary" rel="noopener" target="_blank" href="https://lab4u.co/"> Visitanos <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
         </div>
