--- a/Lab4uTest/Views/Usuarios/Create.cshtml
+++ b/Lab4uTest/Views/Usuarios/Create.cshtml
@@ -1,12 +1,13 @@
 ﻿@model Lab4uTest.Usuario
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Crear";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2 class="mt-5">Creando un nuevo Usuario</h2>
-
+<div class=" mx-4 headers-usuarios sombra-header">
+    <h2 class="mt-2">Creando un nuevo Usuario</h2>
+</div>
 <section class="seccion-espacios d-flex flex-wrap">
     <div class="col-sm-12 col-md-5">
 
