--- a/Lab4uTest/Views/Usuarios/Delete.cshtml
+++ b/Lab4uTest/Views/Usuarios/Delete.cshtml
@@ -6,7 +6,10 @@
 }
 
 
-<h2 class="aviso-borrar-usuario mt-5">¿Está seguro que quiere borrar este usuario?</h2>
+
+<div class=" mx-4 headers-usuarios sombra-header">
+    <h2 class="aviso-borrar-usuario">¿Está seguro que quiere borrar este usuario?</h2>
+</div>
 <section class="seccion-espacios d-flex flex-wrap">
     <div class="informacion-usuarios col-sm-12 col-md-5">
         <h4>Campos del usuario</h4>
