--- a/Lab4uTest/Views/Usuarios/Edit.cshtml
+++ b/Lab4uTest/Views/Usuarios/Edit.cshtml
@@ -1,12 +1,13 @@
 ﻿@model Lab4uTest.Usuario
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Editar";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
-<h2 class="mt-5">Editando Usuario</h2>
+<div class=" mx-4 headers-usuarios sombra-header">
+    <h2 class="">Editando Usuario</h2>
+</div>
 
 <section class="seccion-espacios d-flex flex-wrap">
     
