--- a/Lab4uTest/Content/Site.css
+++ b/Lab4uTest/Content/Site.css
@@ -54,12 +54,21 @@ body {
     font-size:1.4rem;
 }
 
+.headers-usuarios {
+    padding: 12px;
+    margin-top: 35px;
+    min-height: 10px;
+    border-radius: 10px;
+    -webkit-box-shadow: 5px 10px 14px 6px #e2e1e1;
+    box-shadow: 5px 10px 14px 6px #e2e1e1;
+}
+
 
 /* ***************** /ELEMENTOS GENERALES *****************  */
 
 /* ***************** INICIO *****************  */
 
-.jumbotron, .header-administrador {
+.jumbotron, .header-administrador, .headers-usuarios {
     border-radius: 15px;
     background-image: url('img/bg-header-desktop.svg');
     background-color: var(--primary-color);
@@ -67,6 +76,8 @@ body {
     background-position: center;
     background-repeat: no-repeat;
 }
+
+
 
 .jumbotron h1{
     padding:10px;
@@ -85,12 +96,14 @@ body {
 /* ***************** /INICIO *****************  */
 
 /* ***************** VISTA USUARIOS *****************  */
+
+
 .header-administrador {
-    
     padding: 18px;
-    margin-top:35px;
+    margin-top: 35px;
     min-height: 90px;
-    border-radius: 10px;
+}
+.sombra-header {
     -webkit-box-shadow: 5px 10px 14px 6px #e2e1e1;
     box-shadow: 5px 10px 14px 6px #e2e1e1;
 }
@@ -124,10 +137,17 @@ body {
     margin:5px;
     padding:5px;
 }
+
+.container-usuarios .container-usuarios_info .titulo-campos-responsive{
+    font-size: 1.4rem;
+}
+
 /* ***************** /VISTA USUARIOS *****************  */
 
 /* ***************** CREAR USUARIOS *****************  */
 /*Comparte clases de estilos con editar usuarios*/
+
+
 
 /* ***************** /CREAR USUARIOS *****************  */
 
@@ -164,6 +184,7 @@ body {
 
 
 /* ***************** DETALLE USUARIO *****************  */
+
 .informacion-usuarios .detalles-campo{
     font-size:1.3rem;
 }
