--- a/Lab4uTest/Views/Usuarios/Details.cshtml
+++ b/Lab4uTest/Views/Usuarios/Details.cshtml
@@ -1,11 +1,14 @@
 ﻿@model Lab4uTest.Usuario
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Detalles";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Detalles del usuario</h2>
+<div class="mx-1 headers-usuarios sombra-header">
+    <h2>Detalles del usuario</h2>
+</div>
+
 <section class="seccion-espacios d-flex flex-wrap">
 
     <div class="informacion-usuarios col-sm-12 col-md-5">
